# Terraform-AI-Drift-Detector

./: README.md  config.yaml  install_tf.sh  prereq.text  pyproject.toml
src/drift_detector/: __init__.py  cli.py  comparator.py  config_loader.py  dashboard.py  models.py  output.py  scanner.py  scheduler.py  state_parser.py
src/drift_detector/providers/: __init__.py  aws_provider.py  base.py
src/terraform_drift_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: sample_state.json  test_comparator.py  test_scanner.py  test_state_parser.py
