[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-drift-detector"
version = "1.0.0"
description = "Continuously compare Terraform state against actual cloud infrastructure to identify configuration drift"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "boto3==1.34.69",
    "azure-identity==1.15.0",
    "azure-mgmt-resource==23.0.1",
    "google-cloud-asset==3.24.1",
    "google-cloud-resource-manager==1.12.1",
    "click==8.1.7",
    "rich==13.7.1",
    "flask==3.0.2",
    "apscheduler==3.10.4",
    "pydantic==2.6.4",
    "deepdiff==7.0",
    "pyyaml==6.0.1",
    "jinja2==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "mypy==1.9.0",
]

[project.scripts]
drift-detector = "drift_detector.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
